# nimo

./: README.md  pyproject.toml
src/nimo/: __init__.py  __main__.py
