[project]
name = "nimo"
version = "0.1.0"
description = "A simple script to painlessly create directories and files."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
nimo = "nimo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nimo"]
